# corosync-connect-sample-C

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in  darkside  main.c  subs.c
src/include/: darkside.h  message.h
src/lib/: Makefile  Makefile.am  Makefile.in  message.c
